# flowmap

./: .gitignore  FlowMap.spec  README.md  benchmark_heatmap_gpu.py  benchmark_rendering.py  debug_buffer.py  diagnose_classification.py  diagnose_density.py  diagnose_rendering.py  gui_test.py  headless_render.py  profile_heatmap_tmp.py  requirements.txt  run_flowmap.py  setup.py  test_bgra.py  test_centering_smoothness.py  test_heatmap_output.py  test_swap.py  verify_comprehensive.py  verify_v2.py  verify_v4.py
app/: .gitignore  README.md
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/src/: main.rs
bug_hunt/: MASTER_PLAN.md
client/: .gitignore  index.html  package-lock.json  package.json  perf_report.json  playwright.config.ts  tsconfig.app.json  tsconfig.node.json  vite.config.ts
flowmap/: __init__.py  main.py  ssl_bootstrap.py
plugins/: __init__.py  example_indicator.py
scratch/: debug_v4.py
scripts/: dev.sh  package.sh
server/: pyproject.toml
server/scripts/: live_crypto_smoke.py  write_price_scale_golden.py  ws_probe.py
server/src/flowmap_server/: __main__.py  config.py
server/src/flowmap_server/api/: __init__.py  app.py  rest.py  ws.py
server/src/flowmap_server/core/: __init__.py  grid.py  price_scale.py  price_scale_np.py  record.py  session.py
server/src/flowmap_server/feeds/: __init__.py  base.py  crypto.py  equity.py  sim.py
server/src/flowmap_server/proto/: __init__.py  events.py  wire.py
server/tests/: test_config.py
server/tests/api/: test_rest.py  test_ws_e2e.py
server/tests/core/: test_grid.py  test_price_scale.py  test_price_scale_np.py  test_record.py  test_session.py  test_session_recording.py
server/tests/feeds/: test_crypto_bridge.py  test_equity_feed.py  test_sim.py
server/tests/feeds/fixtures/: binance_btcusdt_sample.jsonl
server/tests/proto/: test_wire.py
tests/: _run_phase4_live_reconnect.py  test_bbo_pipeline.py  test_centering_invariant.py  test_density_col_clear.py  test_density_midmask.py  test_gui_column_paint.py  test_gui_session_drain.py  test_live_channels.py  test_normalizer_contrast.py  test_order_book_fixes.py  test_rebuild_heatmap_progressive.py  test_replay_cap.py  (+2 more)
(+391 files in other folders)
