[project]
name = "flowmap-server"
version = "1.2.0"
requires-python = ">=3.13"
dependencies = [
  "crypcodile",
  "stockodile",
  "msgspec>=0.18",
  "numpy>=1.26",
  "polars>=1.0",
  "fastapi>=0.111",
  "uvicorn>=0.30",
]

[dependency-groups]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "pytest-timeout>=2", "httpx>=0.27", "websockets>=12"]

[tool.uv.sources]
crypcodile = { git = "https://github.com/nazmiefearmutcu/Crypcodile.git", rev = "93b48d099977a9a2e12ad77083ce3ed63dc7dd58" }
stockodile = { git = "https://github.com/nazmiefearmutcu/stockodile.git", rev = "8ea71db58bad58d68abbfdbd798b38b18eb7afef" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/flowmap_server"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
timeout = 60
testpaths = ["tests"]
